site/siteService.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-service
spec: 
  selector:
    app: site
  ports:
  - port: 80
    targetPort: 19006
  type: NodePort
