site/site-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: site.needwat.com 
    http:
      paths:
      - backend:
          service:
            name: site-service
            port:
              number: 19006
        path: /
        pathType: Prefix
      - backend:
          service:
            name: api-service
            port:
              number: 3003
        path: /api
        pathType: Prefix
